# qemu

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
docs/: CONTRIBUTING.md  README.md  README.zh-CN.md
docs/common/: engine.md  engine.zh-CN.md  networking-and-devices.md  networking-and-devices.zh-CN.md
docs/guests/: _template.md  _template.zh-CN.md  alpine.md  alpine.zh-CN.md  windows.md  windows.zh-CN.md
supervisor/: Cargo.toml  README.md  build.rs  vmd.toml
supervisor/src/: config.rs  install.rs  lifecycle.rs  log.rs  main.rs  qmp.rs  seed.rs  sidecar.rs  subst.rs  util.rs  web.rs
supervisor/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
supervisor/ui/src/: App.tsx  ConsolePanel.tsx  VncPanel.tsx  api.ts  i18n.tsx  main.tsx  styles.css
